# rust-telegram-bot

./: Cargo.toml
src/: main.rs
src/domain/telegram/gateway/: mod.rs
src/domain/telegram/gateway/contract/: gateway.rs  mod.rs  request.rs  response.rs
src/domain/telegram/gateway/dto/: request.rs  response.rs
src/domain/telegram/gateway/enum/: endpoint.rs  mod.rs
src/domain/telegram/gateway/usecase/: gateway.rs
src/telegram/app/: facade.rs  facade_interface.rs  mod.rs
src/telegram/app/service/receiver/: mod.rs  receiver.rs  receiver_interface.rs
src/telegram/app/service/sender/: mod.rs  sender.rs  sender_interface.rs
src/telegram/domain/: mod.rs
src/telegram/domain/contract/: request.rs  response.rs
src/telegram/domain/enum/: endpoint.rs  error.rs  mod.rs  parse_mode.rs
src/telegram/domain/error/: error.rs
src/telegram/domain/model/: request.rs  response.rs
src/telegram/domain/repository/: interface.rs
src/telegram/infrastructure/repository/: http.rs
