[package]
name = "telegram-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_traitobject = "0.2.8"
serde_json = "1.0.111"
serde = { version = "1.0.155", features = ["derive"] }
serde_derive = "1.0.155"
[dependencies.reqwest]
reqwest = "0.11.14"
features = ["blocking"]