[package]
name = "telegram-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.111"
serde = { version = "1.0.155", features = ["derive"] }
serde_derive = "1.0.155"
env_logger = "0.11.0"
http = "0.2.9"
actix-web = "4"
tokio = { version = "1.26.0", features = [] }
mime = "0.3.16"
[dependencies.reqwest]
reqwest = "0.11.14"